--- a/app/src/main/res/layout/item_bus.xml
+++ b/app/src/main/res/layout/item_bus.xml
@@ -31,12 +31,38 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_directions_bus_black_24dp">
+            <LinearLayout
+                android:id="@+id/llLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_5"
+                android:backgroundTint="@color/app_hash_pool"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
-            </ImageView>
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:tint="@color/gray"
+                    android:src="@drawable/ic_directions_bus_black_24dp">
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/tvLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:text="LOCATION"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="10sp"
+                    android:textStyle="normal">
+
+                </TextView>
+            </LinearLayout>
 
 
             <TextView
