--- a/app/src/main/res/layout/activity_create_bus.xml
+++ b/app/src/main/res/layout/activity_create_bus.xml
@@ -7,159 +7,206 @@
 
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="false"
-        android:focusableInTouchMode="true"
-        android:orientation="vertical"
-        tools:context=".CreateBusActivity">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/white"
-            android:elevation="5dp"
-            android:gravity="center_vertical">
-
-
-            <ImageView
-                android:id="@+id/imgClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="10dp"
-                android:src="@drawable/ic_arrow_back_black_24dp">
-
-            </ImageView>
-
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Create Bus"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="normal">
-
-            </TextView>
-
-            <ImageView
-                android:id="@+id/imgDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="10dp"
-                android:src="@drawable/ic_delete"
-                android:tint="@color/other_red"
-                android:visibility="gone">
-
-            </ImageView>
-
-        </LinearLayout>
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:focusable="false"
+            android:focusableInTouchMode="true"
             android:orientation="vertical"
-            android:padding="35dp">
+            tools:context=".CreateBusActivity">
 
-
-            <EditText
-                android:id="@+id/etBusName"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corner_5"
-                android:drawableRight="@drawable/ic_directions_bus_black_24dp"
-                android:drawableTint="@color/light_gray"
-                android:hint="Bus Name"
-                android:inputType="textCapWords"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="15sp">
-
-            </EditText>
+                android:layout_height="?actionBarSize"
+                android:background="@color/white"
+                android:elevation="5dp"
+                android:gravity="center_vertical">
 
 
-            <EditText
-                android:id="@+id/etBusNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_corner_5"
-                android:drawableRight="@drawable/ic_crop_7_5"
-                android:drawableTint="@color/light_gray"
-                android:hint="Registartion Number"
-                android:inputType="textCapCharacters"
-                android:maxLines="1"
-                android:padding="10dp"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="15sp">
-
-            </EditText>
-
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:orientation="horizontal">
-
-                <RadioButton
-                    android:id="@+id/rbActive"
+                <ImageView
+                    android:id="@+id/imgClose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Active">
+                    android:layout_margin="5dp"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_arrow_back_black_24dp">
 
-                </RadioButton>
+                </ImageView>
 
-                <RadioButton
-                    android:id="@+id/rbInActive"
+                <TextView
+                    android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="In-Active">
+                    android:layout_weight="1"
+                    android:text="Create Bus"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="normal">
 
-                </RadioButton>
-            </RadioGroup>
+                </TextView>
 
+                <ImageView
+                    android:id="@+id/imgDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_delete"
+                    android:tint="@color/other_red"
+                    android:visibility="gone">
 
-            <TextView
-                android:id="@+id/tvCreate"
+                </ImageView>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_corner_5"
-                android:backgroundTint="@color/button_green"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Create"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold">
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="35dp">
 
-            </TextView>
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="10dp"
-                android:indeterminate="true"
-                android:indeterminateTint="@color/new_primary_blue"
-                android:visibility="gone">
+                <EditText
+                    android:id="@+id/etBusName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_corner_5"
+                    android:drawableRight="@drawable/ic_directions_bus_black_24dp"
+                    android:drawableTint="@color/light_gray"
+                    android:hint="Bus Name"
+                    android:inputType="textCapWords"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp">
 
-            </ProgressBar>
+                </EditText>
+
+
+                <EditText
+                    android:id="@+id/etBusNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/rounded_corner_5"
+                    android:drawableRight="@drawable/ic_crop_7_5"
+                    android:drawableTint="@color/light_gray"
+                    android:hint="Registartion Number"
+                    android:inputType="textCapCharacters"
+                    android:maxLines="1"
+                    android:padding="10dp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="15sp">
+
+                </EditText>
+
+
+                <TextView
+                    android:id="@+id/tvStartPoint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/rounded_corner_5"
+                    android:drawableRight="@drawable/ic_flag_black"
+                    android:drawableTint="@color/app_snack_bar_true"
+                    android:gravity="center_vertical"
+                    android:hint="Start Point"
+                    android:inputType="textCapCharacters"
+                    android:maxLines="1"
+                    android:padding="10dp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="15sp">
+
+                </TextView>
+
+
+                <TextView
+                    android:id="@+id/tvEndPoint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/rounded_corner_5"
+                    android:drawableRight="@drawable/ic_flag_black"
+                    android:drawableTint="@color/other_red"
+                    android:gravity="center_vertical"
+                    android:hint="End Point"
+                    android:inputType="textCapCharacters"
+                    android:maxLines="1"
+                    android:padding="10dp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="15sp">
+
+                </TextView>
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rbActive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Active">
+
+                    </RadioButton>
+
+                    <RadioButton
+                        android:id="@+id/rbInActive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:checked="true"
+                        android:text="In-Active">
+
+                    </RadioButton>
+                </RadioGroup>
+
+
+                <TextView
+                    android:id="@+id/tvCreate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/rounded_corner_5"
+                    android:backgroundTint="@color/button_green"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="Create"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold">
+
+                </TextView>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@color/new_primary_blue"
+                    android:visibility="gone">
+
+                </ProgressBar>
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
 
-    </LinearLayout>
+    </ScrollView>
 </layout>
